# geomesh

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: tests.yml
docs/doctrees/: environment.pickle  index.doctree
docs/doctrees/api/: index.doctree  raster.doctree
docs/doctrees/tutorial/: index.doctree  part_2.doctree
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/html/api/: index.html  raster.html
docs/html/tutorial/: index.html  part_2.html
docs/sphinx/: Makefile
docs/sphinx/source/: NCMP_OR_099.laz  (+2 more)
geomesh/: __init__.py  __main__.py  cgal_test.py  driver.py  figures.py  gmsh_test.py  meshgen-gmsh.py  raster.py  test_compas_cgal.py  test_new_aa.py  utils.py
geomesh/api/: __main__.py
geomesh/cli/: build.py  config_parser.py  msh_t_build.py  raster_opts.py
geomesh/cmd/: __init__.py  _base.py  _cache.py  _cli.py  _common.py  _slurm.py  build.py  cache.py  common.py  config.py  configparser.py  distributed_raster_to_mesh_interp.py  feather_geom_diff_filter.py  feature_geom_build.py  flatten_filepath.py  geom.py  hfun_pkl_combine.py  mesh_hfun_build.py  raster_geom_build.py  raster_hfun_build.py  raster_opts.py  tile_index.py
geomesh/collections/: __init__.py  geom.py  raster.py
geomesh/db/: __init__.py  cache.py  orm.py
geomesh/geom/: __init__.py  base.py  combiner.py  geom.py  mesh.py  quadgen.py  raster.py  shapely.py  shapely_geom.py
geomesh/hfun/: __init__.py  base.py  cache.py  hfun.py  mesh.py  raster.py  raster_tile_index.py
geomesh/las/: pointcloud.py
geomesh/mesh/: __init__.py  boundaries.py  mesh.py
geomesh/raster/: __init__.py  cache.py  collection.py  raster.py  tile_index.py
tests/: test_basic_build.py  test_freeze_quads.py
(+49 files in other folders)
