[tool.poetry]
name = "geomesh"
version = "0.0.0"
description = "Package to generate computational unstructured meshes for planetary environmental modeling."
authors = ["Jaime R Calzada <jreniel@gmail.com>"]
readme = "README.md"
packages = [
  { include = "geomesh" },
]


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning", "toml"]
build-backend = "poetry_dynamic_versioning.backend"

# Regular dependencies
[tool.poetry.dependencies]
python = ">=3.10,<3.12" # fiona has C API issues with 3.12
matplotlib = "^3.7.2"
shapely = "^2.0.1"
pyproj = "^3.6.0"
inpoly = {git = "https://github.com/jreniel/inpoly-python.git", rev = "pyproject"}
jigsawpy = {git = "https://github.com/jreniel/jigsaw-python.git", rev = "add_pyproject"}
geopandas = "^0.13.2"
requests = "^2.31.0"
rasterio = "^1.3.8"
appdirs = "^1.4.4"
centerline = "^1.0.1"
networkx = "^3.1"
pyarrow = "^15.0.0"
colored-traceback = "^0.3.0"
dask-geopandas = "^0.3.1"
pexpect = "^4.8.0"
wget = "^3.2"
fasteners = "^0.19"
pydantic = "^2.5.2"
pythoncdt = {git = "https://github.com/artem-ogre/PythonCDT.git", rev = "f8239dd33e0a183cf84d6da152a823c56631831f"}

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.scripts]
geomesh = "geomesh.__main__:main"
geom_build = "geomesh.cli.mpi.geom_build:entrypoint"
hfun_build = "geomesh.cli.mpi.hfun_build:entrypoint"
mesh_build = "geomesh.cli.mpi.mesh_build:entrypoint"

# Nose tests configuration (you might need to adapt this section depending on how you're running your tests)
[tool.nosetests]
exe = true
tests = "tests/"

# Flake8 configuration (if you're using Flake8 for code style checking)
[tool.flake8]
max-line-length = 128

